# pluma-analysis

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build.yml
pluma/examples/: example_load.ipynb  load_dataset_example.ipynb  load_zeromq.ipynb  test_script.py
pluma/export/: maps.py  sdi.py  streams.py
pluma/export/ogcapi/: features.py  records.py  sta.py
pluma/io/: accelerometer.py  eeg.py  empatica.py  glia.py  harp.py  microphone.py  path_helper.py  pupil  pupil.py  ubx.py  zeromq  zeromq.py
pluma/io/_nepy/: NedfReader.py
pluma/plotting/: export.py  maps.py
pluma/preprocessing/: ecg.py  resampling.py  utils.py
pluma/schema/: __init__.py  dataset.py  outdoor.py  vr.py
pluma/stream/: __init__.py  accelerometer.py  csv.py  ecg.py  eeg.py  empatica.py  georeference.py  glia.py  harp.py  microphone.py  pupil.py  siconversion.py  ubx.py  unity.py  zeromq.py
pluma/sync/: __init__.py  plotting.py  ubx2harp.py
pluma/templates/: metadata_template.j2
