[project]
name = "pluma-analysis"
authors = [
    {name = "Goncalo Lopes", email = "g.lopes@neurogears.org"},
    {name = "Bruno Cruz", email = "b.cruz@neurogears.org"},
    {name = "Andrew Erskine", email = "a.erskine@neurogears.org"},
]
description = "A low-level interface to data collected with the pluma urban data acquisition system"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]
license = {text = "MIT License"}

dependencies = [
    "geopandas",
    "matplotlib",
    "mapclassify",
    "folium",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "s3fs",
    "pyubx2",
    "tilemapbase",
    "dotmap",
    "mne",
    "defusedxml",
    "heartpy",
    "setuptools",
    "simplekml",
    "isodate",
    "jinja2"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Bug Tracker" = "https://github.com/emotional-cities/pluma-analysis/issues"
"Source Code" = "https://github.com/emotional-cities/pluma-analysis"

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 110

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pluma*"]

[tool.setuptools_scm]
version_file = "pluma/_version.py"
